# pycvodes

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  .woodpecker.yaml  AGENTS.md  AUTHORS  CHANGES.rst  CMakeLists.txt  MANIFEST.in  README.rst  SUNDIALS-CHANGELOG-60--74.md  appveyor.yml  include  pyproject.toml  setup.cfg  setup.py
.ci/: download_and_install_miniconda3.sh  download_and_install_sundials-3.1.sh  get_sundials-3.1.1.sh  get_sundials.sh  patch_001_sund400.diff  run-matrix.sh  run_ci.sh  test-case.sh  test-config.sh  test-sdist.sh
.circleci/: config.yml
conda-recipe/: bld.bat  build.sh  meta.yaml  run_test.py
examples/: van_der_pol.ipynb  van_der_pol.py
include/: cvodes_cxx.hpp  cvodes_cxx.pxd  cvodes_numpy.hpp  cvodes_numpy.pxd  sundials_cxx.hpp
pycvodes/: __init__.py  _config.py  _cvodes.pyx  _cvodes_numpy.pyx  _libs.py  _release.py  _types.py  _util.py
scripts/: build-conda-recipe-using-docker.sh  build_conda_recipe.sh  check_clean_repo_on_master.sh  ci.sh  ci_download_and_install_sundials.sh  generate_docs.sh  post_release.sh  prepare_deploy.sh  release.sh  render_index.sh  run_tests.sh  update-gh-pages.sh
sundials-docs-excerpts-740/: doc-urls.txt
tests/: .gitignore  Makefile  _cvodes_anyode.cpp  _cvodes_anyode.pyx  _cvodes_anyode.pyxbld  _cvodes_cxx.pyx  _cvodes_cxx.pyxbld  _test_cvodes_anyode.py  _test_cvodes_cxx.py  catch.hpp.bz2  cetsa_case.hpp  cetsa_case_iterative.hpp  doctest.h.bz2  doctest.h.url  test_cvodes_anyode.cpp  test_cvodes_anyode_autorestart.cpp  test_cvodes_anyode_autostart.cpp  test_cvodes_anyode_jtimes.cpp  test_cvodes_anyode_parallel.cpp  test_cvodes_anyode_quad.cpp  test_cvodes_anyode_sparse.cpp  test_cvodes_anyode_svd.cpp  test_cvodes_cxx.cpp  test_cvodes_cxx.py  test_sundials_cxx.cpp  test_tough_case.cpp  testing_utils.hpp  tough_case.hpp
v0.10.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html
v0.10.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.10.12/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html  searchindex.js
v0.10.13/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html
v0.10.14/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html
v0.10.15/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.10.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html
v0.10.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html
v0.10.4/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html  searchindex.js
v0.10.5/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html  searchindex.js
v0.10.6/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html  searchindex.js
v0.11.12/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.11.7/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html
v0.11.8/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html
v0.11.9/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.12.0/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html  searchindex.js
v0.12.2/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html
v0.13.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.13.1/: .buildinfo  genindex.html  index.html  objects.inv  pycvodes.html  search.html
v0.14.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.6.0/: .buildinfo  genindex.html  pycvodes.html
v0.6.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
v0.7.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pycvodes.html  search.html  searchindex.js
(+245 files in other folders)
